# claw-code

./: .gitignore  CLAUDE-CODE-ARCHITECTURE-ANALYSIS.md  CLAUDE-CODE-FEATURE-GAPS.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md
rust/crates/commands/src/: lib.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: compact.rs  conversation.rs  cron_scheduler.rs  lib.rs
rust/crates/runtime/src/bridge/: api.rs  ingress.rs  manager.rs  mod.rs  session.rs  types.rs
rust/crates/rusty-claude-cli/: Cargo.toml
rust/crates/rusty-claude-cli/src/: main.rs
rust/crates/rusty-claude-cli/tests/: output_format_contract.rs
