[package]
name = "runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
sha2 = "0.10"
glob = "0.3"
plugins = { path = "../plugins" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
telemetry = { path = "../telemetry" }
tokio = { version = "1", features = ["io-std", "io-util", "macros", "process", "rt", "rt-multi-thread", "time"] }
walkdir = "2"
cron = "0.13"
chrono = "0.4"
thiserror = "1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
base64 = "0.22"
url = "2.5"
futures-util = "0.3"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
sys-info = "0.9"

[lints]
workspace = true
